<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="macochave.com.verificarcompania.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/txtNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNumero"
        android:gravity="center" />

    <EditText
        android:id="@+id/edtNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtNumero"
        android:inputType="phone"
        android:gravity="center" />

    <Button
        android:id="@+id/btnVer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnVer"
        android:gravity="center" />

    <TextView
        android:id="@+id/txtCompania"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCompania"
        android:gravity="center" />

    <ImageView
        android:id="@+id/imgvCompania"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
